     * Add ttl field.
     * Add a new action dec_nsh_ttl.
   - OVSDB:
     * New high-level documentation in ovsdb(7).
     * New file format documentation for developers in ovsdb(5).
     * Protocol documentation moved from ovsdb-server(1) to ovsdb-server(7).
     * ovsdb-client: New "get-schema-cksum" and "query" commands.
     * ovsdb-client: New "backup" and "restore" commands.
     * ovsdb-tool: New "db-name" and "schema-name" commands.
   - ovs-vsctl and other commands that display data in tables now support a
     --max-column-width option to limit column width.
   - No longer slow-path traffic that sends to a controller.  Applications,
     such as OVN ACL logging, want to send a copy of a packet to a
     controller while leaving the actual packet forwarding in the datapath.
   - OVN:
     * The "requested-chassis" option for a logical switch port now accepts a
       chassis "hostname" in addition to a chassis "name".
     * IPv6
       - Added support to send IPv6 Router Advertisement packets in response to
         the IPv6 Router Solicitation packets from  the VIF ports.
       - Added support to generate Neighbor Solicitation packets using the OVN
         action 'nd_ns' to resolve unknown next hop MAC addresses for the
         IPv6 packets.
     * ovn-ctl: New commands run_nb_ovsdb and run_sb_ovsdb.
   - OpenFlow:
     * ct_clear action is now backed by kernel datapath. Support is probed for
       when OVS starts.
   - Linux kernel 4.13
     * Add support for compiling OVS with the latest Linux 4.13 kernel
   - ovs-dpctl and related ovs-appctl commands:
     * "flush-conntrack" now accept a 5-tuple to delete a specific
       connection tracking entry.
     * New "ct-set-maxconns", "ct-get-maxconns", and "ct-get-nconns" commands
       for userspace datapath.
   - No longer send packets to the Linux TAP device if it's DOWN unless it is
     in another networking namespace.
   - DPDK:
     * Add support for DPDK v17.11